--- a/style.css
+++ b/style.css
@@ -165,10 +165,30 @@ ul.menu li {
 
 /* div classes for photogallery */
 
-.secondrow {
+.specialrow {
     padding-top: 30px;
 }
 
-.thirdrow {
-    padding-top: 30px;
+.ye:hover .info,
+.ye:focus .info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    width: 295px;
+    height: 295px;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.info {
+    display: none;
+}
+
+.info li {
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 600;
+    color: white;
+    padding-right: 40px;
 }
